# clientworks

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml
src/: App.css  App.tsx  Auth.tsx  ClientManager.tsx  ClientTypes.tsx  Clients.tsx  Home.tsx  Servers.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: auth.rs  client.rs  controller.rs  mod.rs  server.rs
src-tauri/src/client/: auth.rs  instance.rs  mod.rs  network.rs
src-tauri/src/client/hooks/: chatlog.rs  mod.rs  payload.rs
