[package]
name = "Clientworks"
version = "0.1.0"
description = "Fast and easy to use Minecraft bot manager."
authors = ["HerrPhoenix"]
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clientworks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = { version = "0.11.8", features = [
    "humantime",
    "auto-color"
] }
log = "0.4.27"
azalea = "0.13.0+mc1.21.5"
azalea-auth = "0.13.0+mc1.21.5"
azalea-chat = "0.13.0+mc1.21.5"
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = "1.45.1"
reqwest = "0.12.20"
tauri-plugin-clipboard-manager = "2"
parking_lot = "0.12.4"
anyhow = "1.0.98"
lazy_static = "1.5.0"
dirs = "6.0.0"
bevy_log = "0.16.1"
